--- a/order-summary-component/css/style.css
+++ b/order-summary-component/css/style.css
@@ -14,6 +14,8 @@
 *,
 *::before,
 *::after {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   font-size: 100%;
 }
@@ -21,8 +23,6 @@
 body {
   font-family: 'Red Hat Display', sans-serif;
   font-size: 1rem;
-  margin: 0;
-  padding: 0;
   min-height: 100vh;
   max-width: 100vw;
   background-color: var(--primary-pale-blue);
@@ -30,7 +30,14 @@ body {
   background-size: 100%;
   background-repeat: no-repeat;
 }
-
+h1 {
+  font-size: 1.125rem;
+  font-weight: 900;
+  color: var(--neutral-dark-blue);
+  margin-top: 1.825rem;
+  margin-bottom: -0.125rem;
+  text-align: center;
+}
 img {
   width: 100%;
   height: 10.125rem;
