--- a/flexbox-image-gallery/style.css
+++ b/flexbox-image-gallery/style.css
@@ -36,13 +36,13 @@ body {
   vertical-align: middle;
 }
 
-@media (min-width: 800px) {
+@media (max-width: 800px) {
   .column {
     flex: 50%;
   }
 }
 
-@media (min-width: 600px) {
+@media (max-width: 600px) {
   .column {
     flex: 100%;
   }
