--- a/order-summary-component/css/style.css
+++ b/order-summary-component/css/style.css
@@ -17,24 +17,38 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-size: 100%;
+  /* font-size: 100%; */
 }
 
 body {
   font-family: 'Red Hat Display', sans-serif;
   font-size: 1rem;
   min-height: 100vh;
-  max-width: 100vw;
+  min-width: 100vw;
   text-align: center;
   background-color: var(--primary-pale-blue);
-  background-image: url('../images/pattern-background-mobile.svg');
-  background-size: 100%;
-  background-repeat: no-repeat;
-  position: absolute;
+  /* background-image: url('../images/pattern-background-mobile.svg'); */
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+button {
+  font-family: inherit;
+}
+.bg__image {
+  background: url('../images/pattern-background-mobile.svg') no-repeat
+    center/cover;
+  height: 400px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
 }
 
 h1 {
@@ -51,14 +65,6 @@ img {
   background-size: cover;
   border-top-left-radius: 0.75rem;
   border-top-right-radius: 0.75rem;
-}
-
-span {
-  margin: 10px 70px;
-}
-
-button {
-  font-family: 'Red Hat Display', sans-serif;
 }
 
 article > img {
@@ -86,16 +92,6 @@ p {
   margin: 10px 60px;
 }
 
-/* .card {
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  border: 1px red solid;
-  margin: 0 auto;
-  background-color: #fff;
-  border-radius: 0.75rem;
-} */
-
 .btn {
   border: none;
   padding: 5px 10px;
@@ -110,7 +106,6 @@ p {
   background-color: transparent;
   color: var(--primary-bright-blue);
   text-decoration: underline;
-  font-weight: bold;
 }
 
 .btn-primary {
@@ -134,6 +129,7 @@ p {
 .container {
   background-color: #fff;
   margin: 20px;
+  padding-bottom: 20px;
   border-radius: 0.75rem;
   box-shadow: 3px 3px 3px hsl(228, 45%, 44%, 0.15);
 }
@@ -161,7 +157,7 @@ p {
 
 .container .buttons {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -172,9 +168,9 @@ p {
 
 @media (min-width: 768px) {
   .bg__image {
-    background: url('../images/pattern-background-desktop.svg') no-repeat
+    background-image: url('../images/pattern-background-desktop.svg') no-repeat
       center/cover;
-    max-height: 50vh;
+    height: 50vh;
   }
 
   .container {
