--- a/3-column-preview-card-component/css/style.css
+++ b/3-column-preview-card-component/css/style.css
@@ -54,7 +54,9 @@ h1 {
   padding: 1em 2.2em;
   border-radius: 100px;
   background-color: grey;
-  margin-top: 100px;
+  /* margin-top: 100px; */
+  position: static;
+  cursor: pointer;
 }
 .sedans {
   background-color: var(--Bright-orange);
@@ -70,6 +72,7 @@ h1 {
   border-radius: 8px 8px 0px 0px;
   padding-top: 50px;
   padding-left: 39px;
+  /* margin-top: ; */
 }
 
 .luxury {
@@ -94,24 +97,28 @@ h1 {
 }
 
 .column {
-  flex: 25%;
+  flex: 33%;
 }
 
 .attribution {
+  font-family: 'Lexend Deca', sans-serif;
   font-size: 11px;
   text-align: center;
+  margin-top: 20px;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
-  margin-top: 20px;
 }
 
-@media (max-width: 800px) {
-  .column {
-    flex: 50%;
+@media screen and (max-width: 992px) {
+  .luxury {
+    border-bottom-right-radius: 8px;
+  }
+  .sedans {
+    border-bottom-left-radius: 8px;
   }
 
-  @media (max-width: 600px) {
+  @media screen and (max-width: 600px) {
     .column {
       flex: 100%;
     }
