--- a/3-column-preview-card-component/css/style.css
+++ b/3-column-preview-card-component/css/style.css
@@ -98,7 +98,7 @@ h1 {
   width: 80%;
   max-width: 920px;
   margin: 0 auto;
-  margin-top: 171px;
+  margin-top: 150px;
 }
 .row {
   display: flex;
@@ -144,6 +144,6 @@ h1 {
     border-radius: 0px 0px 8px 8px;
   }
   #suvs {
-    border-radius: 0px 0px 0px 0px;
+    border-radius: 0px;
   }
 }
