--- a/pricing-component-with-toggle/css/style.css
+++ b/pricing-component-with-toggle/css/style.css
@@ -42,7 +42,7 @@ span {
 .button_gradient {
   background: var(--linear-gradient);
   color: var(--very-light-grayish-blue);
-  padding: 15px 32px;
+  padding: 15px 82px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -51,7 +51,7 @@ span {
 .button_white {
   background: var(--very-light-grayish-blue);
   color: var(--linear-gradient);
-  padding: 15px 32px;
+  padding: 15px 82px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -149,6 +149,7 @@ input:checked + .slider::before {
 }
 
 .professional {
+  color: var(--very-light-grayish-blue);
 }
 .packages__outter__colour {
   background: var(--very-light-grayish-blue);
@@ -162,48 +163,6 @@ input:checked + .slider::before {
   border-width: 1px;
   padding: 10px;
 }
-
-/* input[type='checkbox'] {
-  height: 0;
-  width: 0;
-  visibility: hidden;
-} */
-
-/* label {
-  cursor: pointer;
-  text-indent: -9999px;
-  width: 200px;
-  height: 100px;
-  background: blue;
-  display: block;
-  border-radius: 100px;
-  position: relative;
-} */
-
-/* label:after {
-  content: '';
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  width: 90px;
-  height: 90px;
-  background: #fff;
-  border-radius: 90px;
-  transition: 0.3s;
-}
-
-input:checked + label {
-  background: #bada55;
-}
-
-input:checked + label:after {
-  left: calc(100% - 5px);
-  transform: translateX(-100%);
-}
-
-label:active:after {
-  width: 130px;
-} */
 
 .attribution {
   font-size: 11px;
