--- a/pricing-component-with-toggle/css/style.css
+++ b/pricing-component-with-toggle/css/style.css
@@ -26,14 +26,27 @@ h1 {
   text-align: center;
   color: var(--grayish-blue);
 }
+h2.text1 {
+  margin-bottom: 1px;
+}
 
+h2.text2 {
+  margin-bottom: 1px;
+}
 span {
   color: var(--grayish-blue);
+}
+
+ul {
+  padding-left: 0px;
 }
 
 /* #white_heading {
   color: var(--very-light-grayish-blue);
 } */
+.attribution {
+  margin-top: 10px;
+}
 .button {
   text-transform: uppercase;
   border-radius: 5px;
@@ -155,10 +168,10 @@ input:checked + .slider::before {
   background: var(--very-light-grayish-blue);
 }
 
-.list li {
+.list > li {
   font-size: 20px;
   list-style: none;
-  border-bottom: 1px solid var(--grayish-blue);
+  border-bottom: 2px solid var(--light-grayish-blue);
   padding-inline-start: 0;
   border-width: 1px;
   padding: 10px;
