--- a/pricing-component-with-toggle/css/style.css
+++ b/pricing-component-with-toggle/css/style.css
@@ -21,6 +21,7 @@ body {
   font-size: 15px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
+  background-color: var(--very-light-grayish-blue);
 }
 
 .container {
@@ -77,6 +78,7 @@ h2.text2 {
 
 ul {
   padding-left: 0px;
+  padding-bottom: 24px;
 }
 
 .back {
@@ -97,9 +99,11 @@ ul {
 }
 
 .button_white {
-  background: var(--very-light-grayish-blue);
+  /* background: var(--very-light-grayish-blue); */
+  background: #fff;
   color: var(--linear-gradient);
   padding: 15px 82px;
+  /* margin: 12px ; */
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -115,6 +119,7 @@ ul {
   background: var(--linear-gradient);
   color: var(--very-light-grayish-blue);
   padding: 15px 82px;
+  /* margin: 12px ; */
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -210,13 +215,14 @@ input:checked + .slider::before {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  margin-top: 40px;
 }
 
 .packages {
-  margin: 31px 29px;
-  width: 327px;
+  margin-bottom: 32px;
+  width: 326px;
   padding-bottom: 2.4em;
-  height: 100%;
+  height: 454px;
   background: var(--linear-gradient);
   display: flex;
   flex-direction: column;
@@ -232,9 +238,12 @@ input:checked + .slider::before {
   color: var(--very-light-grayish-blue);
 }
 .packages__outter__colour {
-  background: var(--very-light-grayish-blue);
+  background: #fff;
 }
-
+.packages__outter__size {
+  height: 453px;
+  /* margin-top: 80px; */
+}
 .list > li {
   font-size: 15px;
   line-height: 28px;
@@ -246,10 +255,28 @@ input:checked + .slider::before {
   padding: 10px;
 }
 
+.professional_list > li  {
+  font-size: 15px;
+  line-height: 28px;
+  list-style: none;
+  border-bottom: 1px solid #fff;
+  width: 269px;
+  padding-inline-start: 0;
+  border-width: 1px;
+  padding: 10px;
+  
+}
+ 
 .attribution {
   font-size: 11px;
   text-align: center;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media screen and (min-width: 800px) {
+  #professional_size {
+    height: 501px;
+  }
 }
