--- a/pricing-component-with-toggle/css/style.css
+++ b/pricing-component-with-toggle/css/style.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap'); */
 :root {
   /* Primary */
   --linear-gradient: linear-gradient(hsl(236, 72%, 79%), hsl(237, 63%, 64%));
@@ -24,22 +23,17 @@ body {
   background-color: var(--very-light-grayish-blue);
 }
 
-/* .container {
-  background-image: url('../images/bg-top.svg');
-  background-repeat: no-repeat;
-  background-position: top right;
-} */
-.bottom_image{
+.bottom_image {
   position: absolute;
   bottom: 0;
   left: 0;
   z-index: -1;
   display: none;
 }
-.top_image{
+.top_image {
   position: absolute;
-  top: -70px;
-  right: 0;
+  top: -40px;
+  right: -120px;
   z-index: -1;
 }
 h1 {
@@ -84,10 +78,9 @@ h2.text2 {
 .text_dark {
   color: var(--dark-grayish-blue);
 }
-
-/* span {
-  color: var(--grayish-blue);
-} */
+.text_white {
+  color: #fff;
+}
 
 ul {
   padding-left: 0px;
@@ -99,9 +92,6 @@ ul {
   margin: 0 24px 0 24px;
 }
 
-/* #white_heading {
-  color: var(--very-light-grayish-blue);
-} */
 .attribution {
   margin-top: 10px;
 }
@@ -239,15 +229,22 @@ input:checked + .slider::before {
   align-items: center;
   text-align: center;
   border-radius: 10px;
-  /* box-shadow: 0 19px 38px rgba(30, 35, 33, 1), 0 15px 12px rgba(30, 35, 33, 0.2); */
   flex-wrap: wrap;
   color: var(--grayish-blue);
 }
 
-.package-price{
+.package-price {
   display: flex;
   align-items: center;
+  color: var(--dark-grayish-blue);
 }
+
+.package-price-white {
+  display: flex;
+  align-items: center;
+  color: #fff;
+}
+
 .professional {
   color: var(--very-light-grayish-blue);
 }
@@ -256,7 +253,6 @@ input:checked + .slider::before {
 }
 .packages__outter__size {
   height: 453px;
-  /* margin-top: 80px; */
 }
 .list > li {
   font-size: 15px;
@@ -292,7 +288,6 @@ input:checked + .slider::before {
   .bottom_image {
     display: block;
   }
-  
 }
 
 @media screen and (min-width: 800px) {
