--- a/3-column-preview-card-component/css/style.css
+++ b/3-column-preview-card-component/css/style.css
@@ -5,7 +5,7 @@
   --Bright-orange: hsl(31, 77%, 52%);
   --Dark-cyan: hsl(184, 100%, 22%);
   --Very-dark-cyan: hsl(179, 100%, 13%);
-  /* Paragraphs */
+  /* Paragraphs color */
   --Transparent-white: hsla(0, 0%, 100%, 0.75);
   /* (background, headings, buttons)*/
   --Very-light-gray: hsl(0, 0%, 95%);
